--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@types/lodash": "^4.17.12",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
+    "axios": "^1.7.7",
     "cron": "^3.1.7",
     "express": "^4.21.1",
     "home-assistant-js-websocket": "^9.4.0",
-    "ky": "^1.7.2",
     "lodash": "^4.17.21",
     "p-queue": "^8.0.1",
     "rxjs": "^7.8.1",
