--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "@visualglitch91/hass-sidekick",
   "author": "visualglitch91",
   "main": "src/main.ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/lodash": "^4.17.12",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "cron": "^3.1.7",
     "express": "^4.21.1",
     "home-assistant-js-websocket": "^9.4.0",
@@ -18,5 +19,8 @@
     "typescript": "^5.6.3",
     "uuid": "^10.0.0",
     "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
