--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "@visualglitch91/hass-sidekick",
   "author": "visualglitch91",
-  "main": "src/main.ts",
-  "version": "0.0.2",
+  "main": "src/index.ts",
+  "version": "1.0.0",
   "dependencies": {
-    "@types/express": "^5.0.0",
-    "@types/lodash": "^4.17.12",
-    "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.12",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "cron": "^3.1.7",
-    "express": "^4.21.1",
+    "cron": "^3.3.1",
+    "express": "^4.21.2",
     "home-assistant-js-websocket": "^9.4.0",
     "lodash": "^4.17.21",
-    "p-queue": "^8.0.1",
+    "mqtt": "^5.10.3",
     "rxjs": "^7.8.1",
-    "typescript": "^5.6.3",
-    "uuid": "^10.0.0",
-    "ws": "^8.18.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "vite-node": "^2.1.8",
+    "ws": "^8.18.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/lodash": "^4.17.13"
   }
 }
